# nepi_3rd_party

./: .gitmodules  CLAUDE.md  README.md
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/: CMakeLists.txt  InstallSDK.sh  Tritech-USB-Serial.sh
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/include/: DataTypes.h  errorcodes.h  types.h
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/include/DataProcessor/: DataProcessorApi.h  DataProcessorDef.h
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/include/ECDLogDataTypes/: ecdlogtargetimage.h
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/include/Gemini/: GeminiCommsPublic.h  GeminiStructuresPublic.h
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/include/GenesisSerializer/: 3dprecord.h  AMNavDataRecord.h  AltimeterRecord.h  BarometerRecord.h  CompassRecord.h  DepthRecord.h  GeminiStatusRecord.h  GenericDataTypes.h  GlfApi.h  GlfLoggerDef.h  GlfLoggerGeminiStructure.h  GlfLoggerGlobalTypes.h  GlfLoggerStatus.h  GlfLoggerStatusStructure.h  GlfLoggerV4Structure.h  GlfLoggerVideoStructure.h  GpsRecord.h  SeaKingBathyRec.h  VLBVRecord.h
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/include/Svs5Seq/: Svs5SequencerApi.h
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/include/console/: FirmwareUpgradeDef.h  ciheader.h  console_global_types.h
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/libs/DataProcessor/Linux/aarch64/Release/: libDataProcessor.so.2.0.40
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/libs/Svs5SeqLib/Linux/aarch64/Release/: libSvs5SeqLib.so.2.0.40
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/src/GeminiSDKConsoleApp/: CMakeLists.txt  GeminiSDKConsole.cpp  hotkeys.cpp
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/src/GeminiSDKGuiApp/: CMakeLists.txt  compassrenderer.cpp  compassrenderer.h  compasswidget.cpp  compasswidget.h  fire2palette.h  firmwareupdatedialog.cpp  firmwareupdatedialog.h  firmwareupdatedialog.ui  gemininetwork.cpp  gemininetwork.h  geminirenderer.cpp  geminirenderer.h  geometry.h  gltext.cpp  gltext.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglcontext.cpp  openglcontext.h  openglgrid.cpp  openglgrid.h  opengltext.cpp  opengltext.h  openglwidget.cpp  openglwidget.h  resources.qrc  shaders.h  sonarpalette.h  spectrumpalette.h
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/src/GeminiSDKGuiApp/icons/compass/: artificialhorizon.qml  artificialhorizonSmall.qml  spiritlevel.qml
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/src/GenesisSerializerApp/: AsynchronousLogReader.cpp  CMakeLists.txt  FastLogReader.cpp  SynchronousLogReader.cpp  common.cpp
nepi_misc/GeminiSDK_v2.0.40.0_Ubuntu_20.04_arm-nvidia-nx/src/Svs5LoggerApp/: CMakeLists.txt  Svs5LogReader.cpp  Svs5LogWriter.cpp
